# xxLog

./: CMakeLists.txt  main.cpp  xxLog.cpp  xxLog.h
test/: CMakeLists.txt
xxLog/: CMakeLists.txt
xxLog/include/: xxLog.h
xxLog/res/: log.properties
